static/styles.css
html, body {
    height: 100%;
}

body {
    display: flex;
    flex-direction: column;
}

.content {
    flex: 1 0 auto;
}

.footer {
    flex-shrink: 0;
}

.hero-bgr {
    background-image: url("./images/hero-image.png");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
}

.hero-text {
    padding: 50px 30px;
    backdrop-filter: blur(6px);
    border-radius: 50px;
}

.jumbotron {
    height: 100vh;
    display: flex;
    align-items: center;
}

.jumbotron > .row {
    width: 100%;
}

.aboutText {
    font-size: 24px;
}

.ascii-display {
    margin: 20px auto;
    line-height: 2px;
    font-family: 'Source Code Pro', monospace;
    white-space: nowrap;
    font-weight: 400;
    font-size: 20px;
    padding-top: 10px;
}

.ascii-display-black > p > span {
    color: rgb(0, 0, 0) !important;
}

.ascii-display-green > p > span {
    color: rgb(0, 255, 0) !important;
}


.ascii-display-container {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: left;
    overflow-x: auto;
}

.slider {
    -webkit-appearance: none;
    width: 100%;
    height: 25px;
    background: #d3d3d3;
    outline: none;
    opacity: 0.7;
    -webkit-transition: .2s;
    transition: opacity .2s;
    border-radius: 10px;
  }
  
.slider:hover {
    opacity: 1;
}

.slider::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 15px;
    height: 30px;
    background: #3b608a;
    cursor: pointer;
    border-radius: 15px;
}

.slider::-moz-range-thumb {
    width: 15px;
    height: 30px;
    background: #3b608a;
    cursor: pointer;
    border-radius: 15px;
}


.setting-toggle {
    display: flex;
    flex-direction: row;
    justify-content: left;
    align-items: center;
    flex-wrap: wrap;
}

.setting-toggle-wrapper {
    margin: 20px 0;
}

.setting-toggle-button {
    width: 30%;
    padding: 10px;
    background-color: #4c7aaf;
    text-align: center;
    color: whitesmoke;
    border-radius: 10px;
    cursor: pointer;

    /* prevent text highlight */
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.setting-toggle-button-select {
    box-shadow: inset 0 0 8px #000000;
}

.setting-toggle-button-deselect {
    border-bottom: 4px solid #314f72;
}

.charkeycustom-wrapper {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.setting-toggle-select {
    padding: 5px;
    margin-left: 10px;
    width: 60%;
}

.hidden {
    display: none;
    visibility: hidden;
}

.errorText {
    color: red;
}

.imageUpload {
    border: 1px solid #ccc;
    display: flex;
    flex-direction: row;
    justify-content: center;
    padding: 6px 12px;
    cursor: pointer;
    border-radius: 5px;
}

.size-preview {
    border: 2px solid black;
    padding: 10px;
    margin: 20px;
}

/* hide all file upload inputs */
input[type="file"] {
    display: none;
}
/* increase checkbox size */
input[type=checkbox] {
    transform: scale(1.5);
}

